// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
//  GameStateManager - å…¨å±€æ¸¸æˆçŠ¶æ€ç®¡ç†å™¨ï¼ˆå•ä¾‹ + DontDestroyOnLoadï¼‰
//  åŠŸèƒ½ï¼šæš‚åœã€èƒœåˆ©ã€æ­»äº¡ã€è¾“å…¥ã€åœºæ™¯æµç¨‹ã€UIæ·¡å…¥æ·¡å‡º
//  ä½œè€…ï¼š1ceshadow
//  Unityç‰ˆæœ¬ï¼šUnity 6+ å®Œå…¨å…¼å®¹
//  æ¶æ„äº®ç‚¹ï¼šé›¶è€¦åˆã€é«˜å¤ç”¨ã€çƒ­é‡è½½å®‰å…¨ã€é˜²ç©¿é€æ·¡å…¥
// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

// GameStateManager (DontDestroyOnLoad) â† å…¨å±€ç®¡ç†
// â”œâ”€â”€ Pause System
// â”œâ”€â”€ Win Systemï¼ˆæ·¡å…¥åŠ¨ç”» + è‡ªåŠ¨ä¸‹ä¸€å…³ï¼‰
// â”œâ”€â”€ Death Systemï¼ˆé‡è¯• + å›èœå•ï¼‰
// â”œâ”€â”€ Input Systemï¼ˆç»Ÿä¸€ç»‘å®šï¼‰
// â””â”€â”€ Scene Auto-Progressï¼ˆLevel1 â†’ Level2 â†’ ...ï¼‰

using UnityEngine;
using UnityEngine.InputSystem;
using UnityEngine.SceneManagement;
using UnityEngine.UI;
using System.Collections;
using EdgeRunner.Events;
//using System.Linq;

public class GameStateManager : MonoBehaviour, IGameStateManager
{
    // =============================================================
    //                          å•ä¾‹å®ä¾‹ï¼ˆä¿ç•™å‘åå…¼å®¹ï¼‰
    // =============================================================
    public static GameStateManager Instance { get; private set; }

    // =============================================================
    //                          UI å¼•ç”¨
    // =============================================================
    [Header("â•â•â• UI å¼•ç”¨ â•â•â•")]
    [SerializeField] private GameObject pauseMenuUI;
    [SerializeField] private GameObject winPanel;
    [SerializeField] private Image winFadeImage;
    [SerializeField] private GameObject deathPanel;
    [SerializeField] private Image deathFadeImage;

    // =============================================================
    //                          é…ç½®å‚æ•°
    // =============================================================
    [Header("â•â•â• é…ç½®å‚æ•° â•â•â•")]
    [SerializeField] private float fadeDuration = 1.5f;
    [SerializeField] private string mainMenuScene = "0MainMenu";
    [SerializeField] private string[] levelScenes = { "Level0", "Level1", "Level2", "Level3" };

    // =============================================================
    //                          è¾“å…¥ç³»ç»Ÿ
    // =============================================================
    private PlayerInputActions inputs;

    // =============================================================
    //                          æ¸¸æˆçŠ¶æ€ï¼ˆå…¬å¼€åªè¯»ï¼Œå®ç°æ¥å£ï¼‰
    // =============================================================
    public bool IsPaused => isPaused;
    public bool IsWin => isWin;
    public bool IsDead => isDead;
    
    private bool isPaused;
    private bool isWin;
    private bool isDead;

    // =============================================================
    //                          Unity ç”Ÿå‘½å‘¨æœŸ
    // =============================================================
    private void Awake()
    {
        InitializeSingleton();

        // PreserveGlobalUI();
    }

    private void OnEnable()
    {
        InitializeInputSystem();
        SceneManager.sceneLoaded += OnSceneLoaded;
    }

    private void OnDisable()
    {
        CleanupInputSystem();
        SceneManager.sceneLoaded -= OnSceneLoaded;
    }
    
    // VContainer ä¼šè‡ªåŠ¨ç®¡ç†ç”Ÿå‘½å‘¨æœŸï¼Œæ— éœ€æ‰‹åŠ¨æ³¨é”€

    private void Start()
    {
        InitializeGameState();
        Debug.Log($"GameStateManager å·²å°±ç»ª | å½“å‰åœºæ™¯: {SceneManager.GetActiveScene().name}");
    }

    // =============================================================
    //                          åˆå§‹åŒ–
    // =============================================================
    private void InitializeSingleton()
    {
        if (Instance == null)
        {
            Instance = this;
            DontDestroyOnLoad(gameObject);
            
            Debug.Log("âœ“ GameStateManager åˆå§‹åŒ–å®Œæˆï¼ˆå°†é€šè¿‡ VContainer æ³¨å†Œï¼‰");
        }
        else if (Instance != this)
        {
            Debug.Log("æ£€æµ‹åˆ°é‡å¤ GameStateManager | è‡ªåŠ¨é”€æ¯");
            Destroy(gameObject);
        }
    }

    private void PreserveGlobalUI()
    {
        // å…³é”®ï¼šå°†æ•´ä¸ª UI æ ¹ç‰©ä½“è®¾ä¸ºæ°¸ä¸é”€æ¯
        Transform uiRoot = transform.Find("GameUI");
        if (uiRoot != null)
        {
            DontDestroyOnLoad(uiRoot.gameObject);
            Debug.Log("å…¨å±€ UI å·²æ°¸ä¹…ä¿ç•™ï¼ˆè·¨æ‰€æœ‰å…³å¡ï¼‰");
        }
        else
        {
            Debug.LogWarning("æœªæ‰¾åˆ° GameUIï¼è¯·åœ¨ Hierarchy ä¸­åˆ›å»ºå¹¶æ‹–å…¥ UI");
        }
    }

    // =============================================================
    //                          è¾“å…¥ç³»ç»Ÿ
    // =============================================================
    private void InitializeInputSystem()
    {
        inputs ??= new PlayerInputActions();
        inputs.Enable();

        inputs.UI.Pause.performed += OnPause;
        inputs.UI.Resume.performed += OnResume;
        inputs.UI.Start.performed += OnRestart;
        inputs.UI.BackToMenu.performed += OnBackToMenu;
        inputs.UI.NextLevel.performed += OnNextLevel;
    }

    private void CleanupInputSystem()
    {
        if (inputs == null) return;

        inputs.UI.Pause.performed -= OnPause;
        inputs.UI.Resume.performed -= OnResume;
        inputs.UI.Start.performed -= OnRestart;
        inputs.UI.BackToMenu.performed -= OnBackToMenu;
        inputs.UI.NextLevel.performed -= OnNextLevel;

        inputs.Disable();
    }


    // =============================================================
    //                          åœºæ™¯åŠ è½½å›è°ƒ
    // =============================================================
    private void OnSceneLoaded(Scene scene, LoadSceneMode mode)
    {
        Debug.Log($"åœºæ™¯åŠ è½½å®Œæˆ: {scene.name}");

        // è¿›å…¥æ–°å…³å¡ â†’ é‡ç½®çŠ¶æ€
        //ResumeGame();
        ResetGameState();
        HideAllUI();
        
        // ğŸ”” å‘å¸ƒåœºæ™¯åŠ è½½äº‹ä»¶
        int levelIndex = System.Array.IndexOf(levelScenes, scene.name);
        bool isMainMenu = scene.name == mainMenuScene;
        
        EventBus.Publish(new SceneLoadedEvent
        {
            SceneName = scene.name,
            SceneIndex = levelIndex,
            IsMainMenu = isMainMenu
        });
        
        // å¦‚æœæ˜¯æ¸¸æˆå…³å¡ï¼Œå‘å¸ƒå…³å¡å¼€å§‹äº‹ä»¶
        if (levelIndex >= 0)
        {
            EventBus.Publish(new LevelStartedEvent
            {
                LevelIndex = levelIndex,
                LevelName = scene.name
            });
        }
    }


    // =============================================================
    //                          çŠ¶æ€ç®¡ç†
    // =============================================================
    private void InitializeGameState()
    {
        ResetGameState();
        HideAllUI();
    }
    private void ResetGameState()
    {
        isPaused = false;
        isWin = false;
        isDead = false;
        Time.timeScale = 1f;
    }
    private void HideAllUI()
    {
        if (pauseMenuUI) pauseMenuUI.SetActive(false);
        if (winPanel) winPanel.SetActive(false);
        if (deathPanel) deathPanel.SetActive(false);
    }

    // =============================================================
    //                          è¾“å…¥å›è°ƒ
    // =============================================================
    private void OnPause(InputAction.CallbackContext ctx)
    {
        if (isWin || isDead || !IsInGameScene()) return;
        if (isPaused) ResumeGame();
        else PauseGame();
    }

    private void OnResume(InputAction.CallbackContext ctx) => ResumeGame();

    private void OnRestart(InputAction.CallbackContext context)
    {
        if (!isDead) return;

        RestartGame();
    }

    private void OnBackToMenu(InputAction.CallbackContext ctx)
    {
        if (!isPaused) { return; }

        BackToMenu();
    }

    private void OnNextLevel(InputAction.CallbackContext ctx)
    {
        if (isWin) GoToNextLevel();
    }

    // =============================================================
    //                          å…¬å…±æ¥å£ï¼ˆå®ç° IGameStateManagerï¼‰
    // =============================================================
    public void PauseGame()
    {
        if (!IsInGameScene()) return;

        isPaused = true;
        Time.timeScale = 0f;
        pauseMenuUI?.SetActive(true);
        
        // ğŸ”” å‘å¸ƒæš‚åœäº‹ä»¶
        EventBus.Publish(new GamePausedEvent { IsPaused = true });
        
        Debug.Log("æ¸¸æˆæš‚åœ");
    }

    public void ResumeGame()
    {
        isPaused = false;
        Time.timeScale = 1f;
        pauseMenuUI?.SetActive(false);
        
        // ğŸ”” å‘å¸ƒæ¢å¤äº‹ä»¶
        EventBus.Publish(new GamePausedEvent { IsPaused = false });
        
        Debug.Log("æ¸¸æˆç»§ç»­");
    }
    
    public void TriggerWin()
    {
        if (isWin || isDead) return;
        isWin = true;
        Time.timeScale = 0f;
        if (winPanel) winPanel.SetActive(true);
        StopAllCoroutines();
        StartCoroutine(FadeInWin());
        
        // ğŸ”” å‘å¸ƒèƒœåˆ©äº‹ä»¶
        int levelIndex = GetCurrentLevelIndex();
        EventBus.Publish(new GameWonEvent
        {
            LevelIndex = levelIndex,
            LevelName = SceneManager.GetActiveScene().name,
            CompletionTime = Time.timeSinceLevelLoad
        });
    }
    
    public void TriggerDeath()
    {
        PlayerDieWithDelay(1f);
    }
    
    public void RestartLevel()
    {
        RestartGame();
    }
    
    public void BackToMainMenu()
    {
        BackToMenu();
    }
    
    public void LoadNextLevel()
    {
        GoToNextLevel();
    }
    public void WinGame()
    {
        TriggerWin();
    }

    public void PlayerDieWithDelay(float delay = 1f)
    {
        if (isDead || isWin) return;
        isDead = true;
        Time.timeScale = 0f;

        if (deathPanel)
        {
            deathPanel.SetActive(true);
            StartCoroutine(FadeInDeathWithDelay(delay));  // éé˜»å¡åç¨‹
        }
        
        // ğŸ”” å‘å¸ƒæ¸¸æˆå¤±è´¥äº‹ä»¶
        EventBus.Publish(new GameOverEvent
        {
            Reason = "ç©å®¶æ­»äº¡",
            LevelIndex = GetCurrentLevelIndex()
        });
        
        Debug.Log("ğŸ’€ æ­»äº¡è§¦å‘ï¼Œå»¶è¿Ÿæ·¡å…¥...");
    }


    //public void RestartLevel() => SceneManager.LoadScene(SceneManager.GetActiveScene().name);

    // =============================================================
    //                          æ¸¸æˆæµç¨‹æ§åˆ¶ï¼ˆå†…éƒ¨å®ç°ï¼‰
    // =============================================================

    public void RestartGame()
    {
        Debug.Log("é‡æ–°å¼€å§‹æ¸¸æˆ");
        Time.timeScale = 1f;
        isDead = false;
        StopAllCoroutines();
        SceneManager.LoadScene(SceneManager.GetActiveScene().name);
    }

    public void GoToNextLevel()
    {
        if (!isWin) return;

        Time.timeScale = 1f;
        string next = GetNextLevelName();
        string target = string.IsNullOrEmpty(next) ? mainMenuScene : next;
        SceneManager.LoadScene(target);
        Debug.Log($"åŠ è½½ä¸‹ä¸€å…³: {target}");
    }

    public void BackToMenu()
    {
        Time.timeScale = 1f;
        isPaused = true;
        StopAllCoroutines();
        SceneManager.LoadScene(mainMenuScene);
    }


    // =============================================================
    //                          åç¨‹åŠ¨ç”»
    // =============================================================
    
    /// <summary>
    /// é€šç”¨å›¾ç‰‡æ·¡å…¥åç¨‹
    /// </summary>
    /// <param name="image">è¦æ·¡å…¥çš„å›¾ç‰‡</param>
    /// <param name="duration">æ·¡å…¥æŒç»­æ—¶é—´</param>
    /// <param name="delay">æ·¡å…¥å‰çš„å»¶è¿Ÿï¼ˆå¯é€‰ï¼‰</param>
    private IEnumerator FadeInImage(UnityEngine.UI.Image image, float duration, float delay = 0f)
    {
        if (image == null) yield break;
        
        image.color = new Color(1, 1, 1, 0);
        
        // å»¶è¿Ÿé˜¶æ®µ
        if (delay > 0f)
        {
            float timer = 0f;
            while (timer < delay)
            {
                timer += Time.unscaledDeltaTime;
                yield return null;
            }
        }
        
        // æ·¡å…¥é˜¶æ®µ
        float t = 0f;
        while (t < duration)
        {
            t += Time.unscaledDeltaTime;
            image.color = new Color(1, 1, 1, Mathf.Lerp(0, 1, t / duration));
            yield return null;
        }
        
        image.color = Color.white;
    }
    
    private IEnumerator FadeInWin()
    {
        yield return FadeInImage(winFadeImage, fadeDuration);
    }

    private IEnumerator FadeInDeathWithDelay(float delay)
    {
        yield return FadeInImage(deathFadeImage, fadeDuration, delay);
    }

    // private IEnumerator FadeInWin()
    // {
    //     if (winFadeImage == null) yield break;
    //     winFadeImage.color = new Color(1, 1, 1, 0);
    //     float t = 0;
    //     while (t < fadeDuration)
    //     {
    //         t += Time.unscaledDeltaTime;
    //         float a = Mathf.Lerp(0, 1, t / fadeDuration);
    //         winFadeImage.color = new Color(1, 1, 1, a);
    //         yield return null;
    //     }
    // }

    // =============================================================
    //                          å·¥å…·æ–¹æ³•
    // =============================================================
    private string GetNextLevelName()
    {
        string current = SceneManager.GetActiveScene().name;
        int index = System.Array.IndexOf(levelScenes, current);
        return (index >= 0 && index < levelScenes.Length - 1) ? levelScenes[index + 1] : null;
    }
    
    /// <summary>
    /// è·å–å½“å‰å…³å¡ç´¢å¼•ï¼ˆç”¨äºäº‹ä»¶å‘å¸ƒï¼‰
    /// </summary>
    private int GetCurrentLevelIndex()
    {
        string current = SceneManager.GetActiveScene().name;
        return System.Array.IndexOf(levelScenes, current);
    }

    // private bool IsInGameScene()
    // {
    //     string current = SceneManager.GetActiveScene().name;
    //     return levelScenes.Contains(current);
    // }
    private bool IsInGameScene()
        => System.Array.IndexOf(levelScenes, SceneManager.GetActiveScene().name) >= 0;

    public void switchLevelN(int num)
    {
        SceneManager.LoadScene(levelScenes[num]);
    }

}